--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -18,17 +18,17 @@
                             monaTreeViewDisable [disabledKeys]="treeDisabledKeys"
             >
                 <!--            monaTreeViewDisable [disabledKeys]="treeDisabledKeys"-->
-                <!--            <ng-template monaTreeViewNodeTextTemplate let-dataItem>-->
-                <!--                <span #anchor>-->
-                <!--                    <span style="color: crimson; font-weight: bold;" *ngIf="dataItem.items && dataItem.items?.length !== 0">{{dataItem.text}}</span>-->
-                <!--                    <span style="color: snow; font-weight: bold;" *ngIf="!dataItem.items || dataItem.items?.length === 0">{{dataItem.text}}</span>-->
-                <!--                </span>-->
-                <!--                <mona-contextmenu [target]="anchor">-->
-                <!--                    <mona-menu-item text="AAA" (menuClick)="print(dataItem)"></mona-menu-item>-->
-                <!--                    <mona-menu-item text="BBB"></mona-menu-item>-->
-                <!--                    <mona-menu-item text="CCC" (menuClick)="updateTreeData()"></mona-menu-item>-->
-                <!--                </mona-contextmenu>-->
-                <!--            </ng-template>-->
+<!--                            <ng-template monaTreeViewNodeTextTemplate let-dataItem>-->
+<!--                                <span #anchor>-->
+<!--                                    <span style="color: crimson; font-weight: bold;" *ngIf="dataItem.items && dataItem.items?.length !== 0">{{dataItem.text}}</span>-->
+<!--                                    <span style="color: snow; font-weight: bold;" *ngIf="!dataItem.items || dataItem.items?.length === 0">{{dataItem.text}}</span>-->
+<!--                                </span>-->
+<!--                                <mona-contextmenu [target]="anchor">-->
+<!--                                    <mona-menu-item text="Print" (menuClick)="print(dataItem)"></mona-menu-item>-->
+<!--                                    <mona-menu-item text="Noop"></mona-menu-item>-->
+<!--                                    <mona-menu-item text="Refresh" (menuClick)="updateTreeData()"></mona-menu-item>-->
+<!--                                </mona-contextmenu>-->
+<!--                            </ng-template>-->
             </mona-tree-view>
         </mona-splitter-pane>
         <mona-splitter-pane>
@@ -160,12 +160,22 @@
                                 <button monaButton>Button 1</button>
                                 <button monaButton>Button 2</button>
                                 <button monaButton [flat]="true">Flat Button</button>
+                                <button monaButton [primary]="true">Primary Button</button>
+                                <button monaButton [disabled]="true">Disabled Button</button>
                             </div>
-                            <div>
+                            <div style="display: flex; align-items: center;">
                                 <mona-button-group selection="multiple">
                                     <button monaButton [toggleable]="true">B</button>
                                     <button monaButton [toggleable]="true">I</button>
                                     <button monaButton [toggleable]="true">U</button>
+                                    <button monaButton [toggleable]="true" [(selected)]="buttonGroupButtonSelected">
+                                        <span style="text-decoration: line-through;">S</span>
+                                    </button>
+                                </mona-button-group>
+                                <mona-button-group selection="multiple">
+                                    <button monaButton [toggleable]="true">Left</button>
+                                    <button monaButton [toggleable]="true">Center</button>
+                                    <button monaButton [toggleable]="true" [(selected)]="buttonGroupButtonSelected">Right</button>
                                 </mona-button-group>
                             </div>
                             <div style="display: flex; align-items: center;">
@@ -258,7 +268,7 @@
                             </div>
                             <div style="display: flex; align-items: center;">
                                 <button monaButton [disabled]="false" [primary]="false" [selected]="false"
-                                        [toggleable]="false" [flat]="false"
+                                        [toggleable]="false"
                                         (selectedChange)="onButtonSelectedChange($event)" (click)="openPopup($event)"
                                         #testButtonRef>Line 3
                                     <mona-tooltip [target]="testButtonRef" position="bottom">
