feat: update colors, remove unused colors, add new themes
Theme names are inspired by Genshin Impact and Honkai Star Rail characters

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -155,7 +155,7 @@
                                 </mona-menu>
                             </mona-menubar>
                         </div>
-                        <div class="component-container" style="width: 100%; height: 100%; padding: 10px;">
+                        <div class="component-container" style="padding: 10px;">
                             <div>
                                 <button monaButton>Button 1</button>
                                 <button monaButton>Button 2</button>
