--- a/projects/mona-ui/src/lib/layout/modules/stepper/components/stepper/stepper.component.scss
+++ b/projects/mona-ui/src/lib/layout/modules/stepper/components/stepper/stepper.component.scss
@@ -12,7 +12,7 @@ div.mona-stepper {
 }
 
 div.mona-stepper-horizontal {
-    margin-top: $step-height / -2;
+    margin-top: calc($step-height / -2);
 }
 
 ol.mona-stepper-step-list {
