--- a/projects/mona-ui/src/lib/layout/modules/splitter/components/splitter/splitter.component.html
+++ b/projects/mona-ui/src/lib/layout/modules/splitter/components/splitter/splitter.component.html
@@ -1,4 +1,4 @@
-<div class="mona-splitter" [ngClass]="{'mona-splitter-vertical': orientation==='vertical'}">
+<div class="mona-splitter" [ngClass]="{'mona-splitter-horizontal': orientation==='horizontal', 'mona-splitter-vertical': orientation==='vertical'}">
     <ng-container *ngFor="let pane of paneList; let px = index;">
         <div class="mona-splitter-pane" [attr.data-px]="px" [attr.data-pid]="pane.uid"
              [ngStyle]="{'order': px*2, 'flex-basis': pane.paneSize()}" [ngClass]="{'mona-splitter-static': pane.isStatic, 'mona-splitter-hidden': pane.collapsed}">
