--- a/projects/mona-ui-tester/src/styles.scss
+++ b/projects/mona-ui-tester/src/styles.scss
@@ -1,10 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 @import "dist/mona-ui/styles/lumine";
+//@import "dist/mona-ui/styles/base-light";
 
 html, body {
     width: 100%;
     height: 100%;
     background: #202123;
+    //background: #fcfdfe;
     scroll-behavior: smooth;
 }
 
