--- a/projects/mona-ui/styles/base-light.scss
+++ b/projects/mona-ui/styles/base-light.scss
@@ -14,9 +14,6 @@
     --mona-background-active: hsl(var(--mona-background-base), calc(var(--mona-background-base-lightness) - 3%));
     --mona-background-active-dark: hsl(var(--mona-background-base), calc(var(--mona-background-base-lightness) - 2%));
 
-    --mona-border-color: hsl(var(--mona-background-base), calc(var(--mona-background-base-lightness) - 12%));
-    --mona-focus-border-color: hsl(var(--mona-background-base), calc(var(--mona-background-base-lightness) + 18%));
-
     --mona-primary-base: 346, 54%;
     --mona-primary-base-lightness: 50%;
     --mona-primary: hsl(var(--mona-primary-base), var(--mona-primary-base-lightness));
@@ -31,7 +28,12 @@
     --mona-info: #2196F3;
     --mona-confirm: #CCCCFC;
 
-    --mona-shadow-color: hsl(var(--mona-background-base), calc(var(--mona-background-base-lightness) - 6%));
+    --mona-border-color: hsl(var(--mona-background-base), calc(var(--mona-background-base-lightness) - 12%));
+    --mona-focus-border-color: hsl(var(--mona-background-base), calc(var(--mona-background-base-lightness) + 18%));
+    --mona-primary-border-color: hsl(var(--mona-primary-base), calc(var(--mona-primary-base-lightness) - 6%));
+    --mona-selected-border-color: var(--mona-primary-border-color);
+
+    --mona-shadow-color: hsl(var(--mona-background-base), calc(var(--mona-background-base-lightness) - 20%));
     --mona-popup-shadow: 0 5px 10px -3px var(--mona-shadow-color);
 
     --mona-text-base: 0, 0%;
@@ -43,4 +45,9 @@
 
     --mona-window-background: hsl(var(--mona-background-base), calc(var(--mona-background-base-lightness) - 2%));
     --mona-window-header-background: hsl(var(--mona-background-base), calc(var(--mona-background-base-lightness) - 3.5%));
+
+    --mona-scrollbar-thumb: hsl(var(--mona-background-base), calc(var(--mona-background-base-lightness) - 16%));
+    --mona-scrollbar-thumb-hover: hsl(var(--mona-background-base), calc(var(--mona-background-base-lightness) - 13%));
+    --mona-scrollbar-track: hsl(var(--mona-background-base), calc(var(--mona-background-base-lightness) - 8%));
+
 }
