--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -75,18 +75,18 @@ input, textarea, button {
 }
 
 @mixin scrollbars {
-    scrollbar-color: var(--mona-background-darker) var(--mona-background-dark);
+    scrollbar-color: var(--mona-scrollbar-thumb) var(--mona-scrollbar-track);
     &::-webkit-scrollbar {
         width: 8px;
         height: 8px;
     }
     &::-webkit-scrollbar-track {
-        background: var(--mona-background-dark);
+        background: var(--mona-scrollbar-track);
     }
     &::-webkit-scrollbar-thumb {
-        background-color: var(--mona-background-darker);
+        background-color: var(--mona-scrollbar-thumb);
         &:hover {
-            background-color: var(--mona-background-hover);
+            background-color: var(--mona-scrollbar-thumb-hover);
         }
     }
     &::-webkit-scrollbar-corner {
@@ -241,6 +241,7 @@ button[monaButton] {
     &.mona-primary {
         background-color: var(--mona-primary);
         color: var(--mona-text-inverted);
+        border-color: var(--mona-primary-border-color);
         &:hover {
             background-color: var(--mona-primary-hover);
         }
@@ -263,6 +264,7 @@ button[monaButton] {
     &.mona-selected {
         background-color: var(--mona-primary);
         color: var(--mona-text-inverted);
+        border-color: var(--mona-selected-border-color);
         &:hover {
             background-color: var(--mona-primary-hover);
         }
@@ -587,7 +589,7 @@ div.mona-filter-menu-item {
                     & div.mona-grid-cell {
                         &:not(.mona-grid-cell-editing) {
                             outline: none;
-                            box-shadow: 0 0 0 1px darkgray inset;
+                            box-shadow: 0 0 0 1px var(--mona-primary-dark) inset;
                         }
                     }
                 }
@@ -686,7 +688,7 @@ input[type="checkbox"][monaCheckBox] {
     &:checked + label:before {
         background-color: var(--mona-primary);
         color: var(--mona-text-inverted);
-        //font-size: 1rem;
+        border-color: var(--mona-selected-border-color);
     }
     &:disabled + label {
         cursor: default;
@@ -708,11 +710,12 @@ input[type="checkbox"][monaCheckBox] {
         content: " ";
         background-color: var(--mona-primary);
         color: var(--mona-background);
-        border: 2px solid var(--mona-background);
+        border: 1px solid var(--mona-selected-border-color);
+        box-shadow: inset 0 0 0 1px var(--mona-background);
     }
     &:indeterminate:disabled + label:before {
         @include disabled;
-        border: 2px solid var(--mona-border-color);
+        border: 1px solid var(--mona-selected-border-color);
     }
 }
 
@@ -818,7 +821,7 @@ input[type="radio"][monaRadioButton] {
     }
     & .mona-slider-handler {
         background-color: var(--mona-primary);
-        border: 1px solid var(--mona-border-color);
+        border: 1px solid var(--mona-primary-border-color);
     }
     &.mona-slider-horizontal {
         & .mona-slider-track {
@@ -884,6 +887,7 @@ ol.mona-stepper-step-list {
     &.mona-switch-active {
         & .mona-switch-handle {
             background-color: var(--mona-primary);
+            border-color: var(--mona-primary-border-color);
         }
     }
 }
@@ -1182,7 +1186,7 @@ div.mona-progress-bar-indeterminate {
 }
 
 .mona-tree-view-node-focused {
-    box-shadow: 0 0 0 1px var(--mona-focus-border-color);
+    box-shadow: 0 0 0 1px var(--mona-selected-border-color);
 }
 
 div.mona-tree-view-node-text {
@@ -1192,12 +1196,13 @@ div.mona-tree-view-node-text {
 div.mona-tree-view-node-selected {
     background-color: var(--mona-primary);
     color: var(--mona-text-inverted);
-    box-shadow: 0 0 0 1px var(--mona-border-color);
+    box-shadow: 0 0 0 1px var(--mona-primary-dark);
 }
 
-.mona-tree-view-node-dropping {
+div.mona-tree-view-node-dropping {
     background-color: var(--mona-primary);
-    box-shadow: 0 0 0 1px var(--mona-border-color);
+    color: var(--mona-text-inverted);
+    box-shadow: 0 0 0 1px var(--mona-primary-dark);
 }
 
 .mona-tree-view-node-dragging {
