Started rewriting slider component
Trying to simplify the logic

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -352,6 +352,9 @@
                                 </mona-range-slider>
                             </div>
 
+                            <div style="display: flex; align-items: center; justify-content: center; margin-top: 40px;">
+                                <mona-slider2 orientation="horizontal" [value]="7" (valueChange)="print($event)" style="width: 400px;"></mona-slider2>
+                            </div>
                         </div>
                     </ng-template>
                 </mona-tab>
