--- a/projects/mona-ui/src/lib/inputs/modules/slider2/components/slider2/slider2.component.scss
+++ b/projects/mona-ui/src/lib/inputs/modules/slider2/components/slider2/slider2.component.scss
@@ -2,16 +2,12 @@ $track-thickness: 6px;
 
 div.mona-slider2 {
     position: relative;
-    height: 60px;
     display: flex;
-    align-items: center;
     user-select: none;
 }
 
 div.mona-slider2-track {
     position: relative;
-    width: 100%;
-    height: $track-thickness;
     border: 1px solid var(--mona-border-color);
     background-color: var(--mona-background);
     z-index: 2;
@@ -19,38 +15,17 @@ div.mona-slider2-track {
 
 div.mona-slider2-selection {
     position: absolute;
-    left: 0;
-    top: 0;
-    bottom: 0;
     border: none;
-    transition: width ease-out 0.3s;
     background-color: var(--mona-primary);
-    &.mona-slider2-dragging {
-        transition: none;
-    }
 }
 
 div.mona-slider2-tick-list {
     display: grid;
-    width: 100%;
-    height: calc($track-thickness * 3);
     position: absolute;
-    grid-auto-flow: column;
-    grid-auto-columns: minmax(0, 1fr);
-    align-items: center;
 }
 
 span.mona-slider2-tick {
     display: flex;
-    height: 100%;
-    &.mona-slider2-tick-visible {
-        &:first-child {
-            border-left: 1px solid var(--mona-border-color);
-        }
-        &:nth-child(even) {
-            border-right: 1px solid var(--mona-border-color);
-        }
-    }
     & > span {
         flex: 1;
         cursor: pointer;
@@ -78,9 +53,7 @@ span.mona-slider2-tick-label {
     position: relative;
     align-items: center;
     justify-content: center;
-    height: 19px;
     display: flex;
-    width: 0;
     color: var(--mona-text);
     font-size: 12px;
     line-height: 1.667;
@@ -91,13 +64,130 @@ div.mona-slider2-handler {
     width: calc($track-thickness * 3);
     height: calc($track-thickness * 3);
     position: absolute;
-    left: calc($track-thickness * 3 / -2);
     background-color: var(--mona-primary);
     border: 1px solid var(--mona-primary-border-color);
     z-index: 5;
     cursor: pointer;
-    transition: left ease-out 0.3s;
-    &.mona-slider2-dragging {
-        transition: none;
+    outline: none;
+    &:focus {
+        box-shadow: 0 0 10px 1px var(--mona-primary-border-color);
+    }
+}
+
+div.mona-slider2-horizontal {
+    width: 100%;
+    height: 60px;
+    align-items: center;
+
+    & div.mona-slider2-track {
+        height: $track-thickness;
+        width: 100%;
+    }
+
+    & div.mona-slider2-selection {
+        left: 0;
+        top: 0;
+        bottom: 0;
+        transition: width ease-out 0.3s;
+        &.mona-slider2-dragging {
+            transition: none;
+        }
+    }
+
+    & div.mona-slider2-tick-list {
+        width: 100%;
+        height: calc($track-thickness * 3);
+        grid-auto-flow: column;
+        grid-auto-columns: minmax(0, 1fr);
+        align-items: center;
+    }
+
+    & span.mona-slider2-tick {
+        height: 100%;
+        &.mona-slider2-tick-visible {
+            &:first-child {
+                border-left: 1px solid var(--mona-border-color);
+            }
+            &:nth-child(even) {
+                border-right: 1px solid var(--mona-border-color);
+            }
+        }
+    }
+
+    & div.mona-slider2-tick-label-list {
+        flex-direction: row;
+    }
+
+    & span.mona-slider2-tick-label {
+        width: 0;
+        height: calc($track-thickness * 3);
+    }
+
+    & div.mona-slider2-handler {
+        left: calc($track-thickness * 3 / -2);
+        transition: left ease-out 0.3s;
+        &.mona-slider2-dragging {
+            transition: none;
+        }
+    }
+}
+
+div.mona-slider2-vertical {
+    height: 100%;
+    width: 60px;
+    justify-content: center;
+
+    & div.mona-slider2-track {
+        height: 100%;
+        width: $track-thickness;
+    }
+
+    & div.mona-slider2-selection {
+        left: 0;
+        bottom: 0;
+        right: 0;
+        transition: height ease-out 0.3s;
+        &.mona-slider2-dragging {
+            transition: none;
+        }
+    }
+
+    & div.mona-slider2-tick-list {
+        width: calc($track-thickness * 3);
+        height: 100%;
+        grid-auto-flow: row;
+        grid-auto-columns: unset;
+        grid-auto-rows: minmax(0, 1fr);
+    }
+
+    & span.mona-slider2-tick {
+        flex-direction: column;
+        &.mona-slider2-tick-visible {
+            &:first-child {
+                border-left: none;
+                border-top: 1px solid var(--mona-border-color);
+            }
+            &:nth-child(even) {
+                border-right: none;
+                border-bottom: 1px solid var(--mona-border-color);
+            }
+        }
+    }
+
+    & div.mona-slider2-tick-label-list {
+        flex-direction: column;
+    }
+
+    & span.mona-slider2-tick-label {
+        height: 0;
+        width: calc($track-thickness * 3);
+    }
+
+    & div.mona-slider2-handler {
+        bottom: calc($track-thickness * 3 / -2);
+        transition: bottom ease-out 0.3s;
+        &.mona-slider2-dragging {
+            transition: none;
+        }
     }
 }
