--- a/projects/mona-ui/src/lib/inputs/modules/slider2/components/slider2/slider2.component.html
+++ b/projects/mona-ui/src/lib/inputs/modules/slider2/components/slider2/slider2.component.html
@@ -2,7 +2,9 @@
      [ngClass]="{'mona-slider2-horizontal': orientation==='horizontal',
                  'mona-slider2-vertical': orientation==='vertical'}">
     <div class="mona-slider2-track">
-        <div class="mona-slider2-selection" [ngClass]="{'mona-slider2-dragging': dragging()}" [style.width.px]="trackSelectionWidth()"></div>
+        <div class="mona-slider2-selection" [ngClass]="{'mona-slider2-dragging': dragging()}"
+             [style.width.px]="orientation==='horizontal' ? trackSelectionWidth() : undefined"
+             [style.height.px]="orientation==='vertical' ? trackSelectionWidth() : undefined"></div>
     </div>
     <div class="mona-slider2-tick-list">
         <ng-container *ngFor="let tick of ticks; let tx = index;">
@@ -18,8 +20,8 @@
          [ngClass]="{'mona-slider-position-before': labelPosition==='before', 'mona-slider-position-after': labelPosition==='after'}">
         <ng-container *ngFor="let tick of ticks; let tx = index;">
             <span class="mona-slider2-tick-label">
-                <span *ngIf="!tickValueTemplate && tx % labelStep === 0">{{tick.value}}</span>
-                <span *ngIf="tickValueTemplate && tx % labelStep === 0">
+                <span *ngIf="!tickValueTemplate">{{tick.value}}</span>
+                <span *ngIf="tickValueTemplate">
                     <ng-container
                         *ngTemplateOutlet="tickValueTemplate; context: {$implicit: tick.value}"></ng-container>
                 </span>
@@ -27,5 +29,10 @@
         </ng-container>
     </div>
     <div class="mona-slider2-handler" [ngClass]="{'mona-slider2-dragging': dragging()}"
-         [style.left.px]="handlerPosition()" (mousedown)="onHandlerMouseDown($event)" #handlerElementRef></div>
+         [attr.tabindex]="0"
+         [style.left.px]="orientation==='horizontal' ? handlerPosition() : undefined"
+         [style.bottom.px]="orientation==='vertical' ? handlerPosition() : undefined"
+         (mousedown)="onHandlerMouseDown($event)"
+         (keydown)="onHandlerKeyDown($event)"
+         #handlerElementRef></div>
 </div>
