--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -77,8 +77,8 @@
                                                   [title]="col.title"></mona-grid-column>
                                 <mona-grid-column title="Slider">
                                     <ng-template monaGridCellTemplate>
-                                        <mona-slider2 style="width: 200px;" [value]="sliderValue"
-                                                     (valueChange)="onSliderValueChange($event)"></mona-slider2>
+                                        <mona-slider style="width: 200px;" [value]="sliderValue"
+                                                     (valueChange)="onSliderValueChange($event)"></mona-slider>
                                     </ng-template>
                                 </mona-grid-column>
                                 <mona-grid-column [title]="'Progress'">
@@ -343,53 +343,53 @@
                             </div>
 
                             <div style="display: flex; align-items: center; justify-content: center; margin-top: 40px;">
-                                <mona-slider2 orientation="horizontal" labelPosition="before" [value]="sliderValue" (valueChange)="print($event)" style="width: 400px;">
+                                <mona-slider orientation="horizontal" labelPosition="before" [value]="sliderValue" (valueChange)="print($event)" style="width: 400px;">
                                     <ng-template monaSliderTickValueTemplate let-value>
                                         <fa-icon [icon]="moonIcon" *ngIf="value % 2 === 0"
                                                  style="color: mediumpurple;"></fa-icon>
                                         <fa-icon [icon]="sunIcon" *ngIf="value % 2 !== 0"
                                                  style="color: #fafd0f;"></fa-icon>
                                     </ng-template>
-                                </mona-slider2>
+                                </mona-slider>
                                 <mona-numeric-text-box [(ngModel)]="sliderValue"></mona-numeric-text-box>
                             </div>
 
                             <div style="display: flex; align-items: center; justify-content: center;">
-                                <mona-range-slider2 orientation="horizontal"
+                                <mona-range-slider orientation="horizontal"
                                                     [value]="rangedSliderValues"
                                                     (valueChange)="print($event)"
                                                     style="width: 400px;">
-                                    <ng-template monaSliderTickValueTemplate let-value>
+                                    <ng-template monaRangeSliderTickValueTemplate let-value>
                                         <fa-icon [icon]="moonIcon" *ngIf="value % 2 === 0"
                                                  style="color: mediumpurple;"></fa-icon>
                                         <fa-icon [icon]="sunIcon" *ngIf="value % 2 !== 0"
                                                  style="color: #fafd0f;"></fa-icon>
                                     </ng-template>
-                                </mona-range-slider2>
+                                </mona-range-slider>
                                 <mona-numeric-text-box [ngModel]="rangedSliderValues[0]" (valueChange)="rangedSliderValues=[+$event!, rangedSliderValues[1]]"></mona-numeric-text-box>
                                 <mona-numeric-text-box [ngModel]="rangedSliderValues[1]" (valueChange)="rangedSliderValues=[rangedSliderValues[0], +$event!]"></mona-numeric-text-box>
                             </div>
 
                             <div style="display: flex; align-items: center; justify-content: center; margin-top: 40px;">
-                                <mona-slider2 orientation="vertical" labelPosition="after" [value]="11" (valueChange)="print($event)" style="height: 400px; margin-right: 0;">
+                                <mona-slider orientation="vertical" labelPosition="after" [value]="11" (valueChange)="print($event)" style="height: 400px; margin-right: 0;">
 <!--                                    <ng-template monaSliderTickValueTemplate let-value>-->
 <!--                                        <fa-icon [icon]="moonIcon" *ngIf="value % 2 === 0"-->
 <!--                                                 style="color: mediumpurple;"></fa-icon>-->
 <!--                                        <fa-icon [icon]="sunIcon" *ngIf="value % 2 !== 0"-->
 <!--                                                 style="color: #fafd0f;"></fa-icon>-->
 <!--                                    </ng-template>-->
-                                </mona-slider2>
-                                <mona-range-slider2 orientation="vertical"
+                                </mona-slider>
+                                <mona-range-slider orientation="vertical"
                                                     [value]="[7, 13]"
                                                     (valueChange)="print($event)"
                                                     style="height: 400px;">
-                                    <ng-template monaSliderTickValueTemplate let-value>
+                                    <ng-template monaRangeSliderTickValueTemplate let-value>
                                         <fa-icon [icon]="moonIcon" *ngIf="value % 2 === 0"
                                                  style="color: mediumpurple;"></fa-icon>
                                         <fa-icon [icon]="sunIcon" *ngIf="value % 2 !== 0"
                                                  style="color: #fafd0f;"></fa-icon>
                                     </ng-template>
-                                </mona-range-slider2>
+                                </mona-range-slider>
                             </div>
                         </div>
                     </ng-template>
