--- a/projects/mona-ui/src/lib/inputs/modules/range-slider/components/range-slider/range-slider.component.scss
+++ b/projects/mona-ui/src/lib/inputs/modules/range-slider/components/range-slider/range-slider.component.scss
@@ -1,30 +1,30 @@
 $track-thickness: 6px;
 
-div.mona-range-slider2 {
+div.mona-range-slider {
     position: relative;
     display: flex;
     user-select: none;
 }
 
-div.mona-range-slider2-track {
+div.mona-range-slider-track {
     position: relative;
     border: 1px solid var(--mona-border-color);
     background-color: var(--mona-background);
     z-index: 2;
 }
 
-div.mona-range-slider2-selection {
+div.mona-range-slider-selection {
     position: absolute;
     border: none;
     background-color: var(--mona-primary);
 }
 
-div.mona-range-slider2-tick-list {
+div.mona-range-slider-tick-list {
     display: grid;
     position: absolute;
 }
 
-span.mona-range-slider2-tick {
+span.mona-range-slider-tick {
     display: flex;
     & > span {
         flex: 1;
@@ -33,7 +33,7 @@ span.mona-range-slider2-tick {
     }
 }
 
-div.mona-range-slider2-tick-label-list {
+div.mona-range-slider-tick-label-list {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -49,7 +49,7 @@ div.mona-range-slider2-tick-label-list {
     }
 }
 
-span.mona-range-slider2-tick-label {
+span.mona-range-slider-tick-label {
     position: relative;
     align-items: center;
     justify-content: center;
@@ -60,7 +60,7 @@ span.mona-range-slider2-tick-label {
 }
 
 
-div.mona-range-slider2-handler {
+div.mona-range-slider-handler {
     width: calc($track-thickness * 3);
     height: calc($track-thickness * 3);
     position: absolute;
@@ -74,27 +74,27 @@ div.mona-range-slider2-handler {
     }
 }
 
-div.mona-range-slider2-horizontal {
+div.mona-range-slider-horizontal {
     width: 100%;
     height: 60px;
     align-items: center;
 
-    & div.mona-range-slider2-track {
+    & div.mona-range-slider-track {
         height: $track-thickness;
         width: 100%;
     }
 
-    & div.mona-range-slider2-selection {
+    & div.mona-range-slider-selection {
         left: 0;
         top: 0;
         bottom: 0;
         transition: width ease-out 0.3s, left ease-out 0.3s;
-        &.mona-range-slider2-dragging {
+        &.mona-range-slider-dragging {
             transition: none;
         }
     }
 
-    & div.mona-range-slider2-tick-list {
+    & div.mona-range-slider-tick-list {
         width: 100%;
         height: calc($track-thickness * 3);
         grid-auto-flow: column;
@@ -102,9 +102,9 @@ div.mona-range-slider2-horizontal {
         align-items: center;
     }
 
-    & span.mona-range-slider2-tick {
+    & span.mona-range-slider-tick {
         height: 100%;
-        &.mona-range-slider2-tick-visible {
+        &.mona-range-slider-tick-visible {
             &:first-child {
                 border-left: 1px solid var(--mona-border-color);
             }
@@ -114,45 +114,45 @@ div.mona-range-slider2-horizontal {
         }
     }
 
-    & div.mona-range-slider2-tick-label-list {
+    & div.mona-range-slider-tick-label-list {
         flex-direction: row;
     }
 
-    & span.mona-range-slider2-tick-label {
+    & span.mona-range-slider-tick-label {
         width: 0;
         height: calc($track-thickness * 3);
     }
 
-    & div.mona-range-slider2-handler {
+    & div.mona-range-slider-handler {
         left: calc($track-thickness * 3 / -2);
         transition: left ease-out 0.3s;
-        &.mona-range-slider2-dragging {
+        &.mona-range-slider-dragging {
             transition: none;
         }
     }
 }
 
-div.mona-range-slider2-vertical {
+div.mona-range-slider-vertical {
     height: 100%;
     width: 60px;
     justify-content: center;
 
-    & div.mona-range-slider2-track {
+    & div.mona-range-slider-track {
         height: 100%;
         width: $track-thickness;
     }
 
-    & div.mona-range-slider2-selection {
+    & div.mona-range-slider-selection {
         left: 0;
         bottom: 0;
         right: 0;
-        transition: height ease-out 0.3s;
-        &.mona-range-slider2-dragging {
+        transition: height ease-out 0.3s, bottom ease-out 0.3s;
+        &.mona-range-slider-dragging {
             transition: none;
         }
     }
 
-    & div.mona-range-slider2-tick-list {
+    & div.mona-range-slider-tick-list {
         width: calc($track-thickness * 3);
         height: 100%;
         grid-auto-flow: row;
@@ -160,9 +160,9 @@ div.mona-range-slider2-vertical {
         grid-auto-rows: minmax(0, 1fr);
     }
 
-    & span.mona-range-slider2-tick {
+    & span.mona-range-slider-tick {
         flex-direction: column;
-        &.mona-range-slider2-tick-visible {
+        &.mona-range-slider-tick-visible {
             &:first-child {
                 border-left: none;
                 border-top: 1px solid var(--mona-border-color);
@@ -174,19 +174,19 @@ div.mona-range-slider2-vertical {
         }
     }
 
-    & div.mona-range-slider2-tick-label-list {
+    & div.mona-range-slider-tick-label-list {
         flex-direction: column;
     }
 
-    & span.mona-range-slider2-tick-label {
+    & span.mona-range-slider-tick-label {
         height: 0;
         width: calc($track-thickness * 3);
     }
 
-    & div.mona-range-slider2-handler {
+    & div.mona-range-slider-handler {
         bottom: calc($track-thickness * 3 / -2);
         transition: bottom ease-out 0.3s;
-        &.mona-range-slider2-dragging {
+        &.mona-range-slider-dragging {
             transition: none;
         }
     }
