--- a/projects/mona-ui/src/lib/inputs/modules/slider/components/slider/slider.component.html
+++ b/projects/mona-ui/src/lib/inputs/modules/slider/components/slider/slider.component.html
@@ -1,25 +1,25 @@
-<div class="mona-slider2"
-     [ngClass]="{'mona-slider2-horizontal': orientation==='horizontal',
-                 'mona-slider2-vertical': orientation==='vertical'}">
-    <div class="mona-slider2-track">
-        <div class="mona-slider2-selection" [ngClass]="{'mona-slider2-dragging': dragging()}"
+<div class="mona-slider"
+     [ngClass]="{'mona-slider-horizontal': orientation==='horizontal',
+                 'mona-slider-vertical': orientation==='vertical'}">
+    <div class="mona-slider-track">
+        <div class="mona-slider-selection" [ngClass]="{'mona-slider-dragging': dragging()}"
              [style.width.px]="orientation==='horizontal' ? trackSelectionWidth() : undefined"
              [style.height.px]="orientation==='vertical' ? trackSelectionWidth() : undefined"></div>
     </div>
-    <div class="mona-slider2-tick-list">
+    <div class="mona-slider-tick-list">
         <ng-container *ngFor="let tick of ticks; let tx = index;">
-            <span class="mona-slider2-tick" [ngClass]="{'mona-slider2-tick-visible': showTicks}" *ngIf="tx !== 0">
+            <span class="mona-slider-tick" [ngClass]="{'mona-slider-tick-visible': showTicks}" *ngIf="tx !== 0">
                 <span (click)="onTickClick($event, tick)" [attr.data-value]="tick.value"></span>
             </span>
-            <span class="mona-slider2-tick" [ngClass]="{'mona-slider2-tick-visible': showTicks}" *ngIf="tx !== ticks.length - 1">
+            <span class="mona-slider-tick" [ngClass]="{'mona-slider-tick-visible': showTicks}" *ngIf="tx !== ticks.length - 1">
                 <span (click)="onTickClick($event, tick)" [attr.data-value]="tick.value"></span>
             </span>
         </ng-container>
     </div>
-    <div class="mona-slider2-tick-label-list"
+    <div class="mona-slider-tick-label-list"
          [ngClass]="{'mona-slider-position-before': labelPosition==='before', 'mona-slider-position-after': labelPosition==='after'}">
         <ng-container *ngFor="let tick of ticks; let tx = index;">
-            <span class="mona-slider2-tick-label">
+            <span class="mona-slider-tick-label">
                 <span *ngIf="!tickValueTemplate">{{tick.value}}</span>
                 <span *ngIf="tickValueTemplate">
                     <ng-container
@@ -28,7 +28,7 @@
             </span>
         </ng-container>
     </div>
-    <div class="mona-slider2-handler" [ngClass]="{'mona-slider2-dragging': dragging()}"
+    <div class="mona-slider-handler" [ngClass]="{'mona-slider-dragging': dragging()}"
          [attr.tabindex]="0"
          [style.left.px]="orientation==='horizontal' ? handlerPosition() : undefined"
          [style.bottom.px]="orientation==='vertical' ? handlerPosition() : undefined"
